--- a/html-stuff/responsive.css
+++ b/html-stuff/responsive.css
@@ -1,3 +1,45 @@
+*{
+  font-size: 10px;
+}
+/*!important cover everything*/
+header h1{
+  font-size: 30px !important;
+}
+
+header{
+  font-size: 20px;
+}
+
+/*select the first span elem after the h1*/
+h1+span{
+  /*relative to the span's parents, 20px,not 30px*/
+  font-size:4em;
+  /*font-size:80px;*/
+}
+
+span:last-child{
+  /* root elem always refers to the html,10*10==100px*/
+  font-size:10rem;
+  /*font-size:100px;*/
+}
+
+/* ==== flexbox ==== */
+img{
+  width: 450px;
+  height: 300px;
+  margin: 10px;
+  transition: all 1s;
+}
+img:hover{
+  transform: scale(1.1);
+}
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+/* ==== responsive part ==== */
 @media (max-width: 320px) {
   body{background-color: red;}
   .navitem{
