--- a/html-stuff/responsive.css
+++ b/html-stuff/responsive.css
@@ -27,7 +27,7 @@ span:last-child{
 img{
   width: 250px;
   height: 200px;
-  margin: 10px;
+  /*margin: 10px;*/
   transition: all 1s;
 }
 img:hover{
@@ -38,10 +38,13 @@ img:hover{
   flex-wrap: wrap;
   justify-content: center;
 }*/
+
 .container{
   display: grid;
   gap: 20px;
-  grid-template-columns: 1fr 1fr 2fr;
+  /*grid-template-columns: 1fr 1fr 2fr;*/
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-rows: 1fr;
 }
 
 /* ==== responsive part ==== */
